--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -1,3 +1,49 @@
-.section4{
+/* .section4{
     height: 80vh;
-}
+} */
+.contact-section {
+    /* background-color: gray; */
+    padding: 10px;
+    text-align: left;
+    border-radius: 8px;
+    font-family: Arial, sans-serif;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  
+  .contact-details {
+    display: flex;
+    justify-content: space-around; /* Align items horizontally with equal spacing */
+    width: 100%;
+    font-size: 14px;
+    line-height: 1.5;
+  }
+  
+  .contact-item {
+    display: flex;
+    align-items: center; /* Align the text and icons vertically */
+    gap: 5px; /* Spacing between text and icon */
+    padding: 0 10px;
+  }
+  
+  .contact-section h2 {
+    font-size: 16px;
+    margin-bottom: 8px;
+    text-align: center;
+  }
+  
+  .contact-details a {
+    color: #0066cc;
+    text-decoration: none;
+  }
+  
+  .contact-details a:hover {
+    text-decoration: underline;
+  }
+  
+  .contact-item svg {
+    color: white; /* Set icon color */
+  }
+  
