--- a/src/index.css
+++ b/src/index.css
@@ -26,7 +26,7 @@
     /* height: 1000vh; */
     /* margin: 0; */
     /* content: ''; */
-    background-image: url(./img/background.jpg);
+    background-image: url(/img/background.jpg);
     background-size: contain;
     background-position: top left;
     background-attachment: fixed;
