--- a/src/components/Gallery/Gallery.css
+++ b/src/components/Gallery/Gallery.css
@@ -21,12 +21,22 @@
     height: 200vh;
   } */
 
-  #section2{
-    /* position: relative; */
+  /* #section2{
+   
     width: 100%;
-    /* display: flex; */
+    
     align-items: center;
-  }
+  } */
+
+  #section2 {
+    width: 100%;             /* Full width */
+    /* display: flex; */
+    /* justify-content: center; */
+    align-items: center;
+    /* padding: 1%;             Optional padding for better spacing */
+    height: 100%;
+    
+}
 
 
   #section2 h1{
