--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -22,3 +22,9 @@
   .navbar a:hover {
     text-decoration: underline;
   }
+
+  @media only screen and (max-width: 768px) {
+    .navbar {
+      display: none; /* Hide the right-div, including the image, on small screens */
+    }
+  }
