--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -60,9 +60,9 @@
   }
 
 
-  @media only screen and (max-width: 768px) {
+  /* @media only screen and (max-width: 768px) {
     .contact-section {
-      display: none; /* Hide the right-div, including the image, on small screens */
+      display: none;
     }
-  }
+  } */
   
