--- a/src/components/Gallery/Gallery.css
+++ b/src/components/Gallery/Gallery.css
@@ -48,6 +48,9 @@
   }
   .carousal-container{
     display: flex;
+    width: 100%; /* Ensure full width */
+    justify-content: center;
+    overflow-x: hidden;
   }
 
   .carousel {
@@ -56,11 +59,15 @@
     padding: 20px;
     gap: 20px;
     scroll-behavior: smooth;
+    width: 90%; /* Ensure responsive width */
+    max-width: 1200px; /* Limit max width for better aesthetics */
+    margin: 0 auto; /* Center carousel */
   }
   
   .carousel-item {
     position: relative;
     min-width: 250px;
+    /* min-width: 40vh; */
     transition: transform 0.3s ease-in-out;
     cursor: pointer;
   }
