--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -13,6 +13,7 @@
     position: relative;
     /* height: 80vh;  */
     height: 100%;
+    width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -24,6 +25,7 @@
     /* margin-top: 10vh; */
     z-index: 2; /* Ensures the text is on top of images */
     font-size: 48px;
+    /* font-size: 300%; */
     /* margin-bottom: 20px; */
     /* color: #333; */
   }
@@ -40,8 +42,10 @@
   }
   
   .image-grid img {
-    width: 100px;
-    height: 100px;
+    /* width: 100px;
+    height: 100px; */
+    width: 7%;
+    height: 7%;
     object-fit: cover;
     cursor: pointer;
     transition: transform 0.3s ease, opacity 0.3s ease;
