--- a/src/App.css
+++ b/src/App.css
@@ -21,4 +21,36 @@ body{
 .navbar a:hover {
     text-decoration: underline;
 } 
+
+/* @media only screen and (max-width: 480px) {
+    .navbar a {
+        font-size: 1rem;
+    }
+
+    .welcome-text {
+        font-size: 32px;
+    }
+
+    .image-grid img {
+        width: 80px;
+        height: 80px;
+    }
+
+    .carousel-item {
+        min-width: 150px;
+    }
+
+    .Telescope img {
+        max-width: 80%;
+        height: auto;
+    }
+
+    .contact-section {
+        padding: 10%;
+    }
+
+    .section {
+        padding: 15% 5%;
+    }
+} */
   
