--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -13,7 +13,8 @@
   }
    */
 
-   .contact-section {
+   #section4 {
+    width: 100%;
     height: 100%;
     padding: 5%;             /* Responsive padding */
     text-align: left;
@@ -23,7 +24,9 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    max-width: 90%;          /* Ensure the contact section stays within a responsive width */
+    /* max-width: 90%;           */
+    max-width: 1200px; /* Limiting max-width for aesthetics */
+    margin: 0 auto; /* Centering the section */
 }
   .contact-details {
     display: flex;
