--- a/src/components/PastEvents/Carousel.css
+++ b/src/components/PastEvents/Carousel.css
@@ -72,12 +72,14 @@
 .carousel-container-events {
     display: flex;
     position: relative;
-    width: 80%;
+    width: 100%;
     max-width: 720px;
     /* margin: 50px auto; */
     overflow: hidden;
     /* border: 2px solid #ccc; */
     border-radius: 10px;
+    
+    margin: 0 auto; /* Centering the section */
 }
 
 .carousel-wrapper-events {
