--- a/src/components/PastEvents/PastEvents.css
+++ b/src/components/PastEvents/PastEvents.css
@@ -8,7 +8,8 @@
  } */
 
  #section5 {
-   display: flex;           
+   display: flex;
+              
    justify-content: space-between; /* Evenly space items horizontally */
    align-items: center;     /* Align items vertically in the middle */
    /* height: 100vh;           */
@@ -47,7 +48,9 @@
   
   .Telescope img {
     max-width: 100%;           /* Ensure the image scales to fit */
-    height: 50vh;             
+    /* height: 50vh;              */
+    max-width: 50vh;
+    /* height: 10%; */
     margin-right: 50px;
     /* height: auto; */
   }
