--- a/src/components/Section/Section.css
+++ b/src/components/Section/Section.css
@@ -14,7 +14,12 @@
     margin-top: 0; /* Ensure no extra margin */
     /* height: 100vh; */
     height: 100%;
-    padding: 10% 5%; /* Space for navbar with percentage-based padding */
+    width: 100%;
+    max-height: 100%;
+    max-width: 100%; /* Prevent overflow */
+    overflow: hidden; /* Prevent content from spilling out */
+    padding: 10% 5%; /* Ensure padding doesn’t push content out */
+    padding: 10% 5%; 
     display: flex;
     justify-content: center;
     align-items: center;
