--- a/public/style.css
+++ b/public/style.css
@@ -1,45 +1,31 @@
-* {
+/* redundant file */
+
+ *{
     /* box-sizing: border-box; */
     margin: 0; /* Reset margins */
     padding: 0; /* Reset padding */
-  }
+    box-sizing: border-box; /* Add this back to include padding in element dimensions */
+}
   
   #root{
-    width: 100%;  /* Child div takes 100% of body width */
+    min-width: 100vh;  /* Child div takes 100% of body width */
     height: 100%; /* Child div takes 100% of body height */
-   /* position: relative;
-   background-size: cover;
-   background-position: center; */
-    
   }
     
   body {
-    color: aliceblue;
-    /* position: absolute; */
-    /* bottom: 0px;
-    left: 0px;
-    right: 0px; */
-    /* position: absolute; */
-    /* bottom: 0;
-    left: 0; */
-    /* background-repeat: no-repeat; */
-    /* height: 1000vh; */
-    /* margin: 0; */
-    /* content: ''; */
+    min-height: 100vh;
+    width: 100%;
     background-image: url(./img/background.jpg);
+    background-size: cover;
+    background-attachment: fixed;
+    background-color: #333;
+    color: aliceblue;
     background-size: contain;
     background-position: top left;
-    background-attachment: fixed;
+    overflow-x: hidden;
     
-    /* background-size: cover; */
-    /* background-repeat: repeat; */
-    background-position: center;
-   
-    width: 100%;
-    height: 100%;
-    background-color: #333;
-    /* clip-path: polygon(100% 0%, 0% 100%, 100% 100%); */
-    z-index: -1;
+    /* background-position: center; */
+    /* z-index: -1; */
   }
   
   /* Navbar */
@@ -47,14 +33,11 @@
     position: fixed;
     top: 0;
     width: 100%;
-    /* background-color: #333; */
-    /* background-color: rgba(51, 51, 51, 0.8); */
     padding: 1rem;
     display: flex;
     justify-content: center;
     gap: 20px;
     z-index: 10;
-    /* margin-bottom: 0px; */
   }
   
   .navbar a {
@@ -69,33 +52,24 @@
   
   /* Section Styles */
   .section {
-    /* position: relative;
-    left: 0;
-    right: 0; */
-    /* position: absolute; */
-    /* bottom: 0;
-    left: 0; */
-    
-    
-    margin-top: 0; /* Ensure no extra margin */
-    height: 100vh;
+    min-height: 100vh;
+    width: 100%;
     padding: 100px 20px; /* Space for navbar */
     display: flex;
     justify-content: center;
     align-items: center;
-    /* background-color: #f4f4f4; */
-    scroll-behavior: smooth; /* Smooth scrolling */
+    box-sizing: border-box;
+       
+    
+    /* margin-top: 0; Ensure no extra margin */
+    
+    /* scroll-behavior: smooth; Smooth scrolling */
   }
   
   /* Different section background colors */
     #section1 { 
-        /* background-color: rgba(255, 255, 255, 0.9);  */
         padding-top: 0px;
     }
-    /* #section2 { background-color: rgba(224, 224, 224, 0.9); }
-    #section3 { background-color: rgba(244, 244, 244, 0.9); }
-    #section4 { background-color: rgba(221, 221, 221, 0.9); } */
-  
   /* Photo Gallery */
   .gallery .photos {
     display: flex;
@@ -113,12 +87,11 @@
   /* Smooth Scrolling */
   html {
     scroll-behavior: smooth;
-    /* width: 100vw;
-    height: 100vh; */
-    margin-left: 0;
+    height: 100%;
+    width: 100%;
     margin: 0;
     padding: 0;
-    /* overflow-x: hidden; */
+    overflow-x: hidden;
     
   }
   
@@ -126,9 +99,8 @@
 
   .half-div {
     flex: 1;                 /* Each div takes up equal space */
-    height: 100%;            /* Full height of the section */
+    height: auto;            /* Full height of the section */
     margin: 0 10px;          /* Optional: Add space between the divs */
-    /* background-color: lightblue;  */
     display: flex;
     flex-direction: column;
     justify-content: flex-start;  /* Center content horizontally */
