--- a/src/components/Gallery/Gallery.css
+++ b/src/components/Gallery/Gallery.css
@@ -1,33 +1,3 @@
-/* 
-.gallery .photos {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 10px;
-    justify-content: center;
-  }
-  
-  .gallery img {
-    width: 200px;
-    height: 200px;
-    object-fit: cover;
-    border-radius: 10px;
-  }
-  .section-text{
-    justify-content: center;
-    text-align: center;
-  }
-  #section2 {  
-    display: block;
-    height: 200vh;
-  } */
-
-  /* #section2{
-   
-    width: 100%;
-    
-    align-items: center;
-  } */
-
   #section2 {
     width: 100%;             /* Full width */
     /* display: flex; */
@@ -67,9 +37,16 @@
   .carousel-item {
     position: relative;
     min-width: 250px;
-    /* min-width: 40vh; */
     transition: transform 0.3s ease-in-out;
     cursor: pointer;
+    margin: 10px;
+    /* position: relative;
+    min-width: 300px;  
+    max-width: 300px;
+    height: 200px;     
+    transition: transform 0.3s ease-in-out;
+    cursor: pointer;
+    margin: 10px;  */
   }
   
   .carousel-item:hover {
@@ -77,7 +54,11 @@
   }
   
   .carousel-image {
+    /* width: 100%;
+    border-radius: 10px; */
     width: 100%;
+    /* height: 100%;       */
+    object-fit: cover; 
     border-radius: 10px;
   }
   
@@ -123,72 +104,3 @@
   .scroll-button:hover {
     background-color: rgba(0, 0, 0, 0.8);
   }
-
-  /* #section2{
-    text-align: center;
-    padding: 20px;  
-    height: 100vh;
-  }
-
-  #section2 h1{
-    margin-bottom: 20px;
-    margin-top: 50px;
-  }
-
-  .carousel-container {
-    position: relative;
-    width: 100%;
-    display: flex;
-    align-items: center;
-  }
-  
-  .carousel {
-    display: flex;
-    overflow-x: scroll;
-    scroll-behavior: smooth;
-    width: 100%;
-    overflow: hidden;
-  }
-  
-  .carousel-item {
-    flex: 0 0 auto;
-    width: 300px; 
-    margin: 10px;
-    position: relative;
-  }
-  
-  .carousel-image {
-    width: 100%;
-    height: auto;
-  }
-  
-  .image-content {
-    text-align: center;
-    margin-top: 10px;
-  }
-  
-  .scroll-button {
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    background-color: rgba(0, 0, 0, 0.5);
-    color: white;
-    border: none;
-    padding: 10px;
-    cursor: pointer;
-    z-index: 1;
-  }
-  
-  .scroll-button.left {
-    left: 0;
-  }
-  
-  .scroll-button.right {
-    right: 0;
-  }
-  
-  .scroll-button:hover {
-    background-color: rgba(0, 0, 0, 0.8);
-  }
-   */
-  
